--- a/Familly_Tree_duck_maven/pom.xml
+++ b/Familly_Tree_duck_maven/pom.xml
@@ -51,6 +51,12 @@
             <version>3.12.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.6.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
